--- a/app/src/main/res/layout/activity_sign_in_choice.xml
+++ b/app/src/main/res/layout/activity_sign_in_choice.xml
@@ -38,28 +38,13 @@
         app:layout_constraintTop_toBottomOf="@+id/imgAppIcon" />
 
     <Button
-        android:id="@+id/btn_SignUpStudentActivity"
+        android:id="@+id/btn_SignUpActivity"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="135dp"
         android:backgroundTint="#618FCC"
         android:padding="12dp"
-        android:text="@string/btnSignUpStudent"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgAppIcon" />
-
-    <Button
-        android:id="@+id/btn_SignUpTutorActivity"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="220dp"
-        android:backgroundTint="#618FCC"
-        android:padding="12dp"
-        android:text="@string/btnSignUpTutor"
+        android:text="@string/btnSignUp"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
